--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,13 @@
     <link rel="stylesheet" href ="/styles/nav.css" type="text/css"/>
     <link rel="stylesheet" href ="/styles/header.css" type="text/css"/>
     <link rel="stylesheet" href ="/styles/new-tweet.css" type="text/css"/>
+    <link rel="stylesheet" href ="/styles/tweets.css" type="text/css"/>
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -26,7 +28,7 @@
       <span>tweeter</span>
       <span>ok</span>
     </nav>
-    <header>
+    <header class="profile">
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
@@ -47,6 +49,104 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+      <section class = "tweets">
+        <article class = "tweet">
+        <header class="tweets-header">
+          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
+          <h6 class = "handle">handle</h6>
+        </header>
+        <p>
+          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
+        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
+         lit esse cillum dolore eu fugiat nulla pariatur.
+         </p>
+        <footer class="tweets-footer">
+          <p class="footer-element">timeStamp</p>
+          <p class="footer-element">reactions</p>
+        </footer>
+      </article>
+      <article class = "tweet">
+        <header class="tweets-header">
+          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
+          <h6 class="handle">handle</h6>
+        </header>
+        <p>
+          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
+        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
+         lit esse cillum dolore eu fugiat nulla pariatur.
+         </p>
+        <footer class="tweets-footer">
+          <p class="footer-element">timeStamp</p>
+          <p class="footer-element">reactions</p>
+        </footer>
+      </article>
+      <article class = "tweet">
+        <header class="tweets-header">
+          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
+          <h6 class= "handle">handle</h6>
+        </header>
+        <p>
+          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
+        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
+         lit esse cillum dolore eu fugiat nulla pariatur.
+         </p>
+        <footer class="tweets-footer">
+          <p class="footer-element">timeStamp</p>
+          <p class="footer-element">reactions</p>
+        </footer>
+      </article>
+      <article class = "tweet">
+        <header class="tweets-header">
+          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
+          <h6 class ="handle">handle</h6>
+        </header>
+        <p>
+          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
+        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
+         lit esse cillum dolore eu fugiat nulla pariatur.
+         </p>
+        <footer class="tweets-footer">
+          <p class="footer-element">timeStamp</p>
+          <p class="footer-element">reactions</p>
+        </footer>
+      </article>
+      <article class = "tweet">
+        <header class="tweets-header">
+          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
+          <h6 class="handle">handle</h6>
+        </header>
+        <p>
+          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
+        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
+         lit esse cillum dolore eu fugiat nulla pariatur.
+         </p>
+        <footer class="tweets-footer">
+          <p class="footer-element">timeStamp</p>
+          <p class="footer-element">reactions</p>
+        </footer>
+      </article>
+      <article class = "tweet">
+        <header class="tweets-header">
+          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
+          <h6 id ="handle">handle</h6>
+        </header>
+        <p>
+          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
+        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
+         lit esse cillum dolore eu fugiat nulla pariatur.
+         </p>
+        <footer class="tweets-footer">
+          <p class="footer-element">timeStamp</p>
+          <p class="footer-element">reactions</p>
+        </footer>
+      </article>
       </section>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
         bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
