submission with ajax done?

--- a/public/index.html
+++ b/public/index.html
@@ -41,117 +41,17 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2 class ="new-tweet head">
-        <form class ="new-tweet body"method="POST" action="/tweets/">
+        <form class ="new-tweet-form"method="POST" action="/tweets/">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div class="tweet-bottom">
-            <button type="submit">Tweet</button>
+            <button id = "submit" type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
       </section>
       <section class = "tweets">
-        <article class = "tweet">
-        <header class="tweets-header">
-          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
-          <h6 class = "handle">handle</h6>
-        </header>
-        <p>
-          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
-        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
-         lit esse cillum dolore eu fugiat nulla pariatur.
-         </p>
-        <footer class="tweets-footer">
-          <p class="footer-element">timeStamp</p>
-          <p class="footer-element">reactions</p>
-        </footer>
-      </article>
-      <article class = "tweet">
-        <header class="tweets-header">
-          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
-          <h6 class="handle">handle</h6>
-        </header>
-        <p>
-          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
-        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
-         lit esse cillum dolore eu fugiat nulla pariatur.
-         </p>
-        <footer class="tweets-footer">
-          <p class="footer-element">timeStamp</p>
-          <p class="footer-element">reactions</p>
-        </footer>
-      </article>
-      <article class = "tweet">
-        <header class="tweets-header">
-          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
-          <h6 class= "handle">handle</h6>
-        </header>
-        <p>
-          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
-        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
-         lit esse cillum dolore eu fugiat nulla pariatur.
-         </p>
-        <footer class="tweets-footer">
-          <p class="footer-element">timeStamp</p>
-          <p class="footer-element">reactions</p>
-        </footer>
-      </article>
-      <article class = "tweet">
-        <header class="tweets-header">
-          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
-          <h6 class ="handle">handle</h6>
-        </header>
-        <p>
-          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
-        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
-         lit esse cillum dolore eu fugiat nulla pariatur.
-         </p>
-        <footer class="tweets-footer">
-          <p class="footer-element">timeStamp</p>
-          <p class="footer-element">reactions</p>
-        </footer>
-      </article>
-      <article class = "tweet">
-        <header class="tweets-header">
-          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
-          <h6 class="handle">handle</h6>
-        </header>
-        <p>
-          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
-        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
-         lit esse cillum dolore eu fugiat nulla pariatur.
-         </p>
-        <footer class="tweets-footer">
-          <p class="footer-element">timeStamp</p>
-          <p class="footer-element">reactions</p>
-        </footer>
-      </article>
-      <article class = "tweet">
-        <header class="tweets-header">
-          <h6 class = "creator-handle"><img class="tweets-pic" src="/images/profile-hex.png"> Creator</h6>
-          <h6 id ="handle">handle</h6>
-        </header>
-        <p>
-          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
-        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
-         lit esse cillum dolore eu fugiat nulla pariatur.
-         </p>
-        <footer class="tweets-footer">
-          <p class="footer-element">timeStamp</p>
-          <p class="footer-element">reactions</p>
-        </footer>
-      </article>
       </section>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut la
-        bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate ve
-         lit esse cillum dolore eu fugiat nulla pariatur.</p>
     </main>
   </body>
 </html>
